# eslib

./: .gitignore  .python-version  README.md  ToDo.md  check_requirements.sh  eslib-help.py  eslib.yaml  install.sh  new-install.sh  old-eslib.yaml  old-requirements.txt  old-setup.cfg  pyproject.toml  requirements.txt  run-test.sh  setup.cfg  setup.py  tidy-git.sh  tree.py  tree_output.txt  tree_structure.txt  tree_structure_py.txt
.github/: pytest.yml
.github/workflows/: install.yml  pytest-classes.yml  pytest-packages.yml  pytest.yml
.~github/workflows/: pylint.yml  pytest.yml
cluster/: ada.sh  archive.sh  clean-conda.sh  functions.sh  info.py  mace.sh  nve.sh  report.sh  save.sh  slurm-info.py  submit.py  sumbit.py
cluster/post-process/: pos.sh
cluster/trpmd/: eval.sh  extract.sh  final.sh  prepare.sh  run.sh  spectrum.sh
cluster/trpmd/template/: input.xml  mace.sh  main.sh  nvt.sh  run.py
data/IR-water/: 4000-15000.piece=2.csv  water-IR.experimental.csv
data/IR-water/from-plots/: 0-1000.csv  1000-4000.csv  4000-15000.piece=1.csv  4000-15000.piece=3.csv  prepare.py
data/IR-water/from-table/: absorption.csv  get-data.py  imaginary-refractive-index.csv  molar-absorption.csv  real-refractive-index.csv  spectrum.csv
elia/: __init__.py  physics.py  plot.py
elia/classes/: dipole.py  normal_modes.py  trajectory.py
elia/nn/dataset/: __init__.py  make_dataset.py
elia/nn/functions/: __init__.py  functions.py
elia/nn/network/: MessagePassing.py  SimpleNetwork.py  __init__.py  aile3nn.py  iPIinterface.py
elia/nn/plot/: __init__.py  learning-curves.py
elia/nn/post_processing/: learning-curves.py  (+1 more)
elia/old/: classes.py  dipole-linear-model.py  vibrational-analysis.py
elia/templates/: corr.py  dipole-Efield.py  dipole-diff.py  energy-Efield.py  script.py
eslib/: README.md  __init__.py  dataframes.py  es_tree.sh  formatting.py  functional.py  functions.py  geometry.py  input.py  io_tools.py  ipi_units.py  mathematics.py  metrics.py  output.py  physics.py  plot.py  regex.py  settings.mplstyle  show.py  signal_analysis.py  sklearn_metrics.py  tools.py  txt2LaTeX.py  units.py
eslib/classes/: __init__.py  append.py  aseio.py  atomic_structures.py  atoms_selector.py  bec.py  cube.py  dipole.py  eckart.py  efield.py  eslibModel.py  fourier.py  functions.py  george_tcf.py  hdf5.py  io.py  mace_model.py  netcdf.py  normal_modes.py  physical_tensor.py  properties.py  signal.py  spectrum.py  structure.py  tcf.py  timing.py  trajectory.py  unify_traj.py  vectorize.py
eslib/drivers/: LJwall-calculator.py  LJwall-driver.py  LJwall_calculator.py  mace.py  mace_dipole.py  macelia.py  socketextras.py
eslib/examples/: corr.py  dipole-Efield.py  dipole-diff.py  energy-Efield.py  many-bars.py  parallel.py  script.py  time-series.py  tqdm+multiprocessing.py
eslib/files/: debug-two-programs.json
eslib/fortran/: __init__.py
eslib/nn/: dataset.py  functions.py  user.py
eslib/old/: classes.py  dipole-linear-model.py  vibrational-analysis.py
eslib/scripts/: IR.py  long-path.py  path-angle.py  sample_configurations_by_rdf.py  show-charges.py  template.py
eslib/templates/: dipole-Efield.py  dipole-diff.py  energy-Efield.py  parallel.py  script.py  time-series.py
eslib/workflows/: ipi.txt
pdf/: count-word.py  pdf2txt.py
scripts/: run_checks.sh
tests/: .gitignore
tests/data/: i-pi.extras_0
tests/datasets/: README.md  dataset.train.pth  dataset.val.pth  train.extxyz  val.extxyz
tests/test_help/: test_help.py
tests/test_nn/: functions.py  test_equivariance.py  test_model.py
tests/test_packages/: test_packages.py
tests/test_scripts/: test_scripts.py  test_scritps.py
tests/test_train/: .gitignore  test_train.py
toolbox/: clean.sh  generate_readme.py  tree.py
(+511 files in other folders)
