[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eslib"
version = "1.0.0"
description = "ESLIB installation and setup."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["materials", "science", "ML"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "numpy",
    "colorama",
    "ase",
    "black",
    "bottleneck>=1.3.6",
    "chemiscope",
    "e3nn",
    "icecream",
    "importlib-metadata",
    "matplotlib",
    "matscipy",
    "nbconvert",
    "numexpr>=2.8.4",
    "pandas",
    "pint",
    "scikit-learn",
    "scipy",
    "seekpath",
    "skmatter",
    "sphinx",
    "spglib",
    "tqdm",
    "torch-geometric",
    "xarray",
    "pytest",
    "phonopy",
    "uncertainties"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
