[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eslib"
version = "1.0.0"
description = "ESLIB installation and setup."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["materials", "science", "ML"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "colorama",
    "ase",
    "chemiscope",
    "icecream",
    "matplotlib",
    "matscipy",
    "pandas",
    "pint",
    "scikit-learn",
    "scipy",
    "seekpath",
    "skmatter",
    "spglib",
    "tqdm",
    "xarray",
    "pytest",
    "phonopy",
    "uncertainties"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
include = ["eslib*"]
