[metadata]
name = eslib
version = 1.0.0
description = ESLIB installation and setup.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/eslib
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # Add any required dependencies here
    numpy

[options.package_data]
* = *.py

[options.entry_points]
console_scripts =
    # List of executable scripts
    archive = eslib.cluster.archive:main
    # Add more entry points as needed for the scripts

[options.extras_require]
dev =
    pytest
